# tracker_new

./: .env  .gitignore  add_user_interactive.py  docker-compose.yaml  killer.sh  main.py  myscript.spec  pyinstaller.spec  pyproject.toml  raise_captcha.py  run_tracker.py  save_adk_queries.py  try.py  user_add.py
.github/workflows/: get_windows_exe.yml
src/tracker/: event_queue.py
src/tracker/config/: db_settings.py  logger_config.py  tracker_settings.py
src/tracker/core/: __init__.py  app.py
src/tracker/core/activity_state_tracker/: activity_state_task.py
src/tracker/core/heartbeat/: heartbeat_task.py
src/tracker/core/screenshot_tracker/: screenshot_task.py
src/tracker/core/signal_handler/: signal_handler.py
src/tracker/core/window_tracker/: window_task.py
src/tracker/db/: connect.py  event_store.py  query_store.py
src/tracker/tables/: activity_table.py  adk_query_table.py  heartbeat_table.py  people_table.py  window_event_table.py  working_sessions_table.py
test/settings/: test.env
test/tests/: run_compose_tracker.py
tracker/config/: db_settings.py  tracker_settings.py
tracker/core/: __init__.py  app.py  event_store.py  screen_tracker.py  screenshot_capturer.py
tracker/db/: connect.py
tracker/tables/: activity_table.py  window_event_table.py
